2.25 (0000-00-00)
Modules:
- CSM (new): Imports Benyuan CSM files.
- Dumb (new): Loads plug-in proxy's dumb dump files.
- Mask editor tool: Program termination upon attempt to draw in drawing mode
  was corrected (bun introduced in 2.24).
- NT-MDT: Slowness of MDA spectra loading was corrected.
- All synthesis: Critical warning/crash upon clicking on Change units and the
  current units were unset was fixed.

Other:
- The KDE4 thumbnailer is not built by default.


2.24 (2011-04-08)
Application:
- Translations updated: Czech, French, German, Italian, Russian.

Libraries:
- libprocess: gwy_data_line_new_alike(), gwy_data_line_duplicate() and
  gwy_data_line_clone() keep the offset.
- libgwydgets: GwyColorAxis is drawn correctly if the z-range is inverted.
- libgwyapp: Graph windows offer all graph functions in a context menu.
- libgwyapp: Memory leaks in the data browser were plugged.
- libgwyapp: The most recent 10 files can be opened using Ctrl-1 to Ctrl-0.

Modules:
- MUL file (new): Imports Aarhus MUL data files.
- Spectro tool: It is possible to average the selected spectra.
- Nanoeducator: Loading of multiple spectra per point was corrected.
- Nanoeducator: Z-range of I(z) spectroscopy was corrected.
- OPD file: Support for v5.0 data was added.
- Pixmap: False colour scale is drawn correctly if the z-range is inverted.
- Attocube: File detection is more liberal, accepting anything starting
  with "# Daisy".
- 2D FFT filter: Image difference output type was added.
- Mask editor tool: Spurious drawing upon data/tool switch was corrected.

Other:
- The list of MIME types Gwyddion declares it can open (on Unix) was updated
  and made to be updated automatically.


2.23 (2011-03-05)
Application:
- Translations updated: Czech, French, Russian.

Libraries:
- libgwyprocess: New classes GwyCalibration and GwyCalData representing
  instrument calibrations.
- libgwyapp: Support for calibrations was added to Data Browser.